[gd_scene load_steps=3 format=3 uid="uid://d3prvbxntv3bm"]

[ext_resource type="Script" path="res://control_option.gd" id="1_l5n5t"]
[ext_resource type="PackedScene" uid="uid://cxgwpxo5yy2gv" path="res://action_remap_button.tscn" id="3_4lnhp"]

[node name="ControlOption" type="HBoxContainer"]
script = ExtResource("1_l5n5t")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "label"

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyboardActionRemapButton" parent="." instance=ExtResource("3_4lnhp")]
unique_name_in_owner = true
layout_mode = 2

[node name="MouseActionRemapButton" parent="." instance=ExtResource("3_4lnhp")]
unique_name_in_owner = true
layout_mode = 2
remap_event_type = 1

[node name="JoyActionRemapButton" parent="." instance=ExtResource("3_4lnhp")]
unique_name_in_owner = true
layout_mode = 2
remap_event_type = 2
